--- a/src/renderer/assets/style/app.sass
+++ b/src/renderer/assets/style/app.sass
@@ -1,7 +1,10 @@
 $tabs-border-bottom-width: 2px
+body
+  background-color: #edf1f3
+
 *::-webkit-scrollbar
   display: none
 .content-wrap
   margin: 0 10px
-
 @import "~bulma"
+@import "card"
