--- a/src/renderer/assets/style/app.sass
+++ b/src/renderer/assets/style/app.sass
@@ -1,13 +1,14 @@
 @import "var"
 
-
 $tabs-border-bottom-width: 2px
-
+$modal-background-background-color: rgba(0, 0, 0, .6)
+$modal-content-spacing-mobile: 10px
 body
   background-color: #edf1f3
 
 *::-webkit-scrollbar
   display: none
+
 .content-wrap
   margin: 0 10px
 @import "~bulma"
