--- a/src/renderer/assets/style/app.sass
+++ b/src/renderer/assets/style/app.sass
@@ -18,6 +18,10 @@ body
 .card-footer
   .is-disabled
     color: #a3a3a3
+
+::selection
+  background:transparent
+
 @import "~bulma"
 @import "card"
 @import "transition"
